GP-6402 Improved project name/path error checking.  Added support for Windows UNC project paths. Refactor of GhidraURL utility methods and URI use.  Other related cleanup.